5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1621_2928.log
== SUBMITION (2019-04-01 19:37:25) 
-- CODE:
mg=float(input("qual a massa?"))
vp=float(input("qual a velocidade?"))
mp=float(input("qual a massa?"))
vf=float(input"qual velocidade?")

vf=(mg*vg)- (mp*vp) /(mg+mp)
print=(round4,2)
-- EXECUTION TIME:
0.155568
-- ERROR:
  File "/home/codebench/codes/1621/2928/main.py", line 4
    vf=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:28) 
-- CODE:
mg=float(input("qual a massa?"))
vp=float(input("qual a velocidade?"))
mp=float(input("qual a massa?"))
vf=float(input"qual velocidade?")

vf=(mg*vg)- (mp*vp) /(mg+mp)
print=(round4,2)
-- ERROR:
File "XXXX", line 4
    vf=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:41:37) 
-- CODE:
mg=float(input("qual a massa?"))
vp=float(input("qual a velocidade?"))
mp=float(input("qual a massa?"))
vf=float(input"qual velocidade?")

vf=(mg*vg)- (mp*vp) /(mg+mp)
print=(round(4,2)
-- EXECUTION TIME:
0.115375
-- ERROR:
  File "/home/codebench/codes/1621/2928/main.py", line 4
    vf=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:40) 
-- CODE:
mg=float(input("qual a massa?"))
vp=float(input("qual a velocidade?"))
mp=float(input("qual a massa?"))
vf=float(input"qual velocidade?")

vf=(mg*vg)- (mp*vp) /(mg+mp)
print=(round(4,2)
-- ERROR:
File "XXXX", line 4
    vf=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:52) 
-- CODE:
MG=float(input("qual a massa?"))
VP=float(input("qual a velocidade?"))
MP=float(input("qual a massa?"))
VF=float(input"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- ERROR:
File "XXXX", line 4
    VF=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:06) 
-- CODE:
MG=float(input("qual a massa?"))
VP=float(input("qual a velocidade?"))
MP=float(input("qual a massa?"))
VF=float(input"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- ERROR:
File "XXXX", line 4
    VF=float(input"qual velocidade?")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:59) 
-- CODE:
MG=float(int("qual a massa?"))
VP=float(int("qual a velocidade?"))
MP=float(int("qual a massa?"))
VF=float(int"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- EXECUTION TIME:
0.171627
-- ERROR:
  File "/home/codebench/codes/1621/2928/main.py", line 4
    VF=float(int"qual velocidade?")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:44:03) 
-- CODE:
MG=float(int("qual a massa?"))
VP=float(int("qual a velocidade?"))
MP=float(int("qual a massa?"))
VF=float(int"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- EXECUTION TIME:
0.151299
-- ERROR:
  File "/home/codebench/codes/1621/2928/main.py", line 4
    VF=float(int"qual velocidade?")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:44:07) 
-- CODE:
MG=float(int("qual a massa?"))
VP=float(int("qual a velocidade?"))
MP=float(int("qual a massa?"))
VF=float(int"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- EXECUTION TIME:
0.180314
-- ERROR:
  File "/home/codebench/codes/1621/2928/main.py", line 4
    VF=float(int"qual velocidade?")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:09) 
-- CODE:
MG=float(int("qual a massa?"))
VP=float(int("qual a velocidade?"))
MP=float(int("qual a massa?"))
VF=float(int"qual velocidade?")

vf=(MG*VG)- (MP*VP) /(MG+MP)
print=(round(4,2)
-- ERROR:
File "XXXX", line 4
    VF=float(int"qual velocidade?")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
